# todo-rest

./: .gitignore  Cargo.toml  README.md  Rocket.toml  todos.db.ready
src/: main.rs  models.rs  schema.rs
templates/messenger/: base.html.tera  index.html.tera
