[package]
name = "todo-rest"
version = "0.1.0"
authors = ["Carsten Kragelund <carsten@kragelund.dev>"]
edition = "2018"

[dependencies]
rocket = "0.4.5"
serde = { version = "1.0.117", features = ["derive"] }
rocket_contrib = { version = "0.4.5", features = ["diesel_sqlite_pool"] }
diesel = { version = "1.4.5", features = ["sqlite"] }
